--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,17 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
 }
 
+plugins {
+    id "org.jlleitschuh.gradle.ktlint" version "10.0.0"
+}
+
+allprojects {
+    apply plugin: "org.jlleitschuh.gradle.ktlint" // Version should be inherited from parent
+    ktlint {
+        disabledRules=["no-wildcard-imports"]
+    }
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
